@@ -1,5 +1,5 @@
 dnl
-dnl $Id: config.m4,v 1.1 2003/10/19 21:48:46 shane Exp $
+dnl $Id: config0.m4,v 1.1 2003/11/12 23:42:38 sniper Exp $
 dnl
 
 PHP_ARG_ENABLE(libxml, whether to enable LIBXML support,
@@ -12,11 +12,12 @@ fi
 
 if test "$PHP_LIBXML" != "no"; then
 
+  dnl This extension can not be build as shared
+  ext_shared=no
+
   PHP_SETUP_LIBXML(LIBXML_SHARED_LIBADD, [
     AC_DEFINE(HAVE_LIBXML,1,[ ])
-    PHP_NEW_EXTENSION(libxml, [libxml.c], 
-                            $ext_shared)
-    PHP_SUBST(LIBXML_SHARED_LIBADD)
+    PHP_NEW_EXTENSION(libxml, [libxml.c], $ext_shared)
   ], [
     AC_MSG_ERROR([xml2-config not found. Please check your libxml2 installation.])
   ])
